cabal-version:       2.0
name:                hill-climbing
version:             0.0.0
synopsis:            Hill climbing algorithm using Comonads
description:         Hill climbing algorithm using Comonads
homepage:            https://github.com/ChrisPenner/hill-climbing
bug-reports:         https://github.com/ChrisPenner/hill-climbing/issues
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2018 Chris Penner
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

source-repository head
  type:                git
  location:            https://github.com/ChrisPenner/hill-climbing.git

library
  hs-source-dirs:      src
  exposed-modules:     HillClimbing
                       Prelude

  build-depends:       base-noprelude ^>= 4.11.1.0
                     , relude

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
